--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
 <h1>SIT223-SIT753 - Professional Practice in Information technology</h1>
+<h2>unit chair: Prince</h2>
 </body>
 </html>
