update unit details

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <link rel="stylesheet" type="text/css" media="screen" href="main.css"/>
 </head>
 <body>
-<h1>SIT223-SIT753 - Professional Practice in Information technology</h1>
+<h1>Professional Practice in Information technology</h1>
+<h2>T1 burwood</h2>
 <h2>unit chair: Prince</h2>
 </body>
 </html>
