--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <h1>Professional Practice in Information technology</h1>
-<h2>T1 burwood</h2>
-<h2>unit chair: Prince</h2>
+<h2>T2 burwood</h2>
+<h2>unit chair: Atabek</h2>
 <h3>add navbar</h3>
 </body>
 </html>
