--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 <link rel="stylesheet" type="text/css" media="screen" href="main.css"/>
 </head>
 <body>
-<h1>Professional Practice in Information technology</h1>
+<h1>SIT223-753 Professional Practice in Information technology</h1>
 <h2>T2 burwood</h2>
 <h2>unit chair: Atabek</h2>
-<h3>add navbar</h3>
+<h2>ULos</h2>
+<h3>Ulo1</h3>
 </body>
 </html>
