add paragraph and change font size

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <h2>unit chair: Atabek</h2>
 <h2>ULos</h2>
 <h3>Ulo1</h3>
+<p>this unit will help uou develop your professional IT</p>
 </body>
 </html>
