--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <h1>SIT223-753 Professional Practice in Information technology</h1>
 <h2>T2 burwood</h2>
 <h2>unit chair: Atabek</h2>
-<h2>ULos</h2>
 <h3>Ulo1</h3>
+<h3>prequisite mus t have compelte</h3>
 <p>this unit will help uou develop your professional IT</p>
 </body>
 </html>
